--- a/src/pages/landing/saas.astro
+++ b/src/pages/landing/saas.astro
@@ -39,7 +39,7 @@ const meta = {
   <Hero2
     callToAction={{ text: 'Get template', href: 'https://github.com/onwidget/astrowind', icon: 'tabler:download' }}
     callToAction2={{ text: 'Learn more', href: '#features' }}
-    image={{ src: import('~/assets/images/hero.png'), alt: 'AstroWind Hero Image' }}
+    image={{ src: import('~/assets/images/hero.png'), alt: 'Paste Resume Hero Image' }}
   >
     <Fragment slot="title">
       Free template for <br />
@@ -48,10 +48,10 @@ const meta = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 2.0 +
+        <span class="font-semibold">Paste Resume</span> is a free, customizable and production-ready template for Astro 2.0 +
         Tailwind CSS.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span> Suitable for Startups,
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">Paste Resume: Production-ready.</span> Suitable for Startups,
       Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs.
     </Fragment>
   </Hero2>
