--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -14,7 +14,7 @@
     target="_blank"
     rel="noopener"
     class="float-right"
-    title="If you like AstroWind, give us a star."
+    title="If you like Paste Resume, give us a star."
     href="https://github.com/onwidget/astrowind"
   >
     <img
