--- a/src/components/blog/List.astro
+++ b/src/components/blog/List.astro
@@ -1,9 +1,9 @@
 ---
-import Item from '~/components/blog/ListItem.astro';
-import type { Post } from '~/types';
+import Item from '~/components/blog/ListItem.astro'
+import type { Post } from '~/types'
 
 export interface Props {
-  posts: Array<Post>;
+  posts: Array<Post>
 }
 
 const { posts } = Astro.props;
@@ -11,10 +11,10 @@ const { posts } = Astro.props;
 
 <ul>
   {
-    posts.map((post) => (
+    posts.map( post => (
       <li class="mb-12 md:mb-20">
         <Item post={post} />
       </li>
-    ))
+    ) )
   }
 </ul>
