--- a/src/components/common/ToggleMenu.astro
+++ b/src/components/common/ToggleMenu.astro
@@ -1,11 +1,11 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon'
 
 export interface Props {
-  label?: string;
-  class?: string;
-  iconClass?: string;
-  iconName?: string;
+  label?: string
+  class?: string
+  iconClass?: string
+  iconName?: string
 }
 
 const {
