--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -1,18 +1,18 @@
 ---
-import { Picture } from '@astrojs/image/components';
+import { Picture } from '@astrojs/image/components'
 
-import { BLOG } from '~/config.mjs';
-import type { Post } from '~/types';
+import { BLOG } from '~/config.mjs'
+import type { Post } from '~/types'
 
-import { findImage } from '~/utils/images';
-import { getPermalink } from '~/utils/permalinks';
+import { findImage } from '~/utils/images'
+import { getPermalink } from '~/utils/permalinks'
 
 export interface Props {
-  post: Post;
+  post: Post
 }
 
-const { post } = Astro.props;
-const image = await findImage(post.image);
+const { post } = Astro.props
+const image = await findImage( post.image );
 ---
 
 <article class="mb-6 transition">
@@ -22,7 +22,7 @@ const image = await findImage(post.image);
         <Picture
           src={image}
           class="md:object-cover w-full md:w-auto md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-          widths={[400, 900]}
+          widths={[ 400, 900 ]}
           width={400}
           height={224}
           sizes="(max-width: 900px) 400px, 900px"
@@ -36,16 +36,18 @@ const image = await findImage(post.image);
   </div>
   <h3 class="mb-2 text-xl font-bold leading-tight sm:text-2xl font-heading">
     {
-      BLOG?.post?.disabled ? (
-        post.title
-      ) : (
+      BLOG?.post?.disabled
+        ? (
+            post.title
+          )
+        : (
         <a
-          href={getPermalink(post.permalink, 'post')}
+          href={getPermalink( post.permalink, 'post' )}
           class="hover:text-primary dark:hover:text-blue-700  transition ease-in duration-200"
         >
           {post.title}
         </a>
-      )
+          )
     }
   </h3>
   <p class="text-muted dark:text-slate-400 text-lg">{post.excerpt || post.description}</p>
