--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -1,26 +1,26 @@
 ---
-import { Icon } from 'astro-icon';
-import { Picture } from '@astrojs/image/components';
-import PostTags from '~/components/blog/Tags.astro';
+import { Icon } from 'astro-icon'
+import { Picture } from '@astrojs/image/components'
+import PostTags from '~/components/blog/Tags.astro'
 
-import { BLOG } from '~/config.mjs';
-import type { Post } from '~/types';
+import { BLOG } from '~/config.mjs'
+import type { Post } from '~/types'
 
-import { getPermalink } from '~/utils/permalinks';
-import { findImage } from '~/utils/images';
-import { getFormattedDate } from '~/utils/utils';
+import { getPermalink } from '~/utils/permalinks'
+import { findImage } from '~/utils/images'
+import { getFormattedDate } from '~/utils/utils'
 
 export interface Props {
-  post: Post;
+  post: Post
 }
 
-const { post } = Astro.props;
-const image = await findImage(post.image);
+const { post } = Astro.props
+const image = await findImage( post.image )
 
-const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
+const link = !BLOG?.post?.disabled ? getPermalink( post.permalink, 'post' ) : '';
 ---
 
-<article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${image ? 'md:grid-cols-2' : ''}`}>
+<article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${ image ? 'md:grid-cols-2' : '' }`}>
   {
     image && (
       <a class="relative block group" href={link ?? 'javascript:void(0)'}>
@@ -29,7 +29,7 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
             <Picture
               src={image}
               class="absolute inset-0 object-cover w-full h-full mb-6 rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-              widths={[400, 900]}
+              widths={[ 400, 900 ]}
               sizes="(max-width: 900px) 400px, 900px"
               alt={post.title}
               aspectRatio="16:9"
@@ -46,14 +46,14 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
       <div class="mb-1">
         <span class="text-sm">
           <Icon name="tabler:clock" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
-          <time datetime={String(post.publishDate)}>{getFormattedDate(post.publishDate)}</time>
+          <time datetime={String( post.publishDate )}>{getFormattedDate( post.publishDate )}</time>
           {
             post.category && (
               <>
                 {' '}
                 ·{' '}
-                <a class="capitalize hover:underline" href={getPermalink(post.category, 'category')}>
-                  {post.category.replaceAll('-', ' ')}
+                <a class="capitalize hover:underline" href={getPermalink( post.category, 'category' )}>
+                  {post.category.replaceAll( '-', ' ' )}
                 </a>
               </>
             )
@@ -62,13 +62,15 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
       </div>
       <h2 class="text-xl sm:text-2xl font-bold leading-tight mb-2 font-heading dark:text-slate-300">
         {
-          link ? (
+          link
+            ? (
             <a class="hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200" href={link}>
               {post.title}
             </a>
-          ) : (
-            post.title
-          )
+              )
+            : (
+                post.title
+              )
         }
       </h2>
     </header>
