--- a/src/components/common/MetaTags.astro
+++ b/src/components/common/MetaTags.astro
@@ -1,37 +1,37 @@
 ---
-import { AstroSeo } from '@astrolib/seo';
-import { GoogleAnalytics } from '@astrolib/analytics';
-import { getImage } from '@astrojs/image';
+import { AstroSeo } from '@astrolib/seo'
+import { GoogleAnalytics } from '@astrolib/analytics'
+import { getImage } from '@astrojs/image'
 
-import { SITE } from '~/config.mjs';
-import { MetaSEO } from '~/types';
-import { getCanonical, getAsset } from '~/utils/permalinks';
-import { getRelativeUrlByFilePath } from '~/utils/directories';
+import SplitbeeAnalytics from './SplitbeeAnalytics.astro'
+import { SITE } from '~/config.mjs'
+import type { MetaSEO } from '~/types'
+import { getAsset, getCanonical } from '~/utils/permalinks'
+import { getRelativeUrlByFilePath } from '~/utils/directories'
 
-import CustomStyles from '~/components/CustomStyles.astro';
-import SplitbeeAnalytics from './SplitbeeAnalytics.astro';
+import CustomStyles from '~/components/CustomStyles.astro'
 
 export interface Props extends MetaSEO {
-  dontUseTitleTemplate?: boolean;
+  dontUseTitleTemplate?: boolean
 }
 
 const defaultImage = SITE.defaultImage
   ? (
-      await getImage({
+      await getImage( {
         src: SITE.defaultImage,
         alt: 'Default image',
         width: 1200,
         height: 628,
-      })
+      } )
     ).src
-  : '';
+  : ''
 
 const {
   title = SITE.name,
   description = '',
   image: _image = defaultImage,
 
-  canonical = getCanonical(String(Astro.url.pathname)),
+  canonical = getCanonical( String( Astro.url.pathname ) ),
   noindex = false,
   nofollow = false,
 
@@ -39,15 +39,16 @@ const {
   ogType = 'website',
 
   dontUseTitleTemplate = false,
-} = Astro.props;
+} = Astro.props
 
-const image =
-  typeof _image === 'string'
-    ? new URL(_image, Astro.site)
-    : _image && typeof _image['src'] !== 'undefined'
-    ? // @ts-ignore
-      new URL(getRelativeUrlByFilePath(_image.src), Astro.site)
-    : null;
+const image
+  = typeof _image === 'string'
+    ? new URL( _image, Astro.site )
+    // @ts-expect-error
+    : ( _image && typeof _image.src !== 'undefined' )
+      // @ts-expect-error
+      ? new URL( getRelativeUrlByFilePath( _image.src ), Astro.site )
+      : null;
 ---
 
 <meta charset="UTF-8" />
@@ -55,15 +56,15 @@ const image =
 
 <AstroSeo
   title={title}
-  titleTemplate={dontUseTitleTemplate ? '%s' : `%s — ${SITE.name}`}
+  titleTemplate={dontUseTitleTemplate ? '%s' : `%s — ${ SITE.name }`}
   description={description}
-  canonical={String(canonical)}
+  canonical={String( canonical )}
   noindex={noindex}
   nofollow={nofollow}
   openGraph={{
-    url: String(canonical),
+    url: String( canonical ),
     title: ogTitle,
-    description: description,
+    description,
     type: ogType,
     images: image
       ? [
@@ -88,10 +89,10 @@ const image =
 {SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
 
 <!-- Google Analytics -->
-{SITE.googleAnalyticsId && <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />}
+{SITE.googleAnalyticsId && <GoogleAnalytics id={String( SITE.googleAnalyticsId )} partytown={true} />}
 
 {SITE.splitbeeAnalytics?.enabled && <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />}
 
-<link rel="shortcut icon" href={getAsset('/favicon.ico')} />
-<link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
-<link rel="mask-icon" href={getAsset('/favicon.svg')} color="#8D46E7" />
+<link rel="shortcut icon" href={getAsset( '/favicon.ico' )} />
+<link rel="icon" type="image/svg+xml" href={getAsset( '/favicon.svg' )} />
+<link rel="mask-icon" href={getAsset( '/favicon.svg' )} color="#8D46E7" />
