--- a/src/components/common/SocialShare.astro
+++ b/src/components/common/SocialShare.astro
@@ -1,10 +1,10 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon'
 
 export interface Props {
-  text: string;
-  url: string | URL;
-  class?: string;
+  text: string
+  url: string | URL
+  class?: string
 }
 
 const { text, url, class: className = 'inline-block' } = Astro.props;
