--- a/src/components/common/ToggleTheme.astro
+++ b/src/components/common/ToggleTheme.astro
@@ -1,13 +1,13 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon'
 
-import { SITE } from '~/config.mjs';
+import { SITE } from '~/config.mjs'
 
 export interface Props {
-  label?: string;
-  class?: string;
-  iconClass?: string;
-  iconName?: string;
+  label?: string
+  class?: string
+  iconClass?: string
+  iconName?: string
 }
 
 const {
@@ -20,7 +20,7 @@ const {
 ---
 
 {
-  !(SITE?.defaultTheme && SITE.defaultTheme.endsWith(':only')) && (
+  !( SITE?.defaultTheme && SITE.defaultTheme.endsWith( ':only' ) ) && (
     <button type="button" class={className} aria-label={label} data-aw-toggle-color-scheme>
       <Icon name={iconName} class={iconClass} />
     </button>
