--- a/src/components/widgets/CallToAction.astro
+++ b/src/components/widgets/CallToAction.astro
@@ -1,22 +1,22 @@
 ---
-import { Icon } from 'astro-icon';
+import { Icon } from 'astro-icon'
 
 interface CallToAction {
-  text: string;
-  href: string;
-  icon?: string;
+  text: string
+  href: string
+  icon?: string
 }
 
 export interface Props {
-  title?: string;
-  description?: string;
-  callToAction?: string | CallToAction;
+  title?: string
+  description?: string
+  callToAction?: string | CallToAction
 }
 
 const {
-  title = await Astro.slots.render('title'),
-  subtitle = await Astro.slots.render('subtitle'),
-  callToAction = await Astro.slots.render('callToAction'),
+  title = await Astro.slots.render( 'title' ),
+  subtitle = await Astro.slots.render( 'subtitle' ),
+  callToAction = await Astro.slots.render( 'callToAction' ),
 } = Astro.props;
 ---
 
@@ -36,20 +36,22 @@ const {
         }
         {subtitle && <p class="text-xl text-muted dark:text-slate-400" set:html={subtitle} />}
         {
-          typeof callToAction === 'string' ? (
+          typeof callToAction === 'string'
+            ? (
             <Fragment set:html={callToAction} />
-          ) : (
-            callToAction &&
-            callToAction.text &&
-            callToAction.href && (
+              )
+            : (
+                callToAction
+            && callToAction.text
+            && callToAction.href && (
               <div class="mt-6 max-w-xs mx-auto">
                 <a class="btn btn-primary w-full sm:w-auto" href={callToAction.href} target="_blank" rel="noopener">
                   {callToAction.icon && <Icon name={callToAction.icon} class="w-5 h-5 mr-1 -ml-1.5" />}
                   {callToAction.text}
                 </a>
               </div>
-            )
-          )
+                )
+              )
         }
       </div>
     </div>
