--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,28 +1,28 @@
 ---
-import { Icon } from 'astro-icon';
-import { Picture } from '@astrojs/image/components';
+import { Icon } from 'astro-icon'
+import { Picture } from '@astrojs/image/components'
 
 interface CallToAction {
-  text: string;
-  href: string;
-  icon?: string;
+  text: string
+  href: string
+  icon?: string
 }
 
 export interface Props {
-  title?: string;
-  subtitle?: string;
-  callToAction?: string | CallToAction;
-  callToAction2?: string | CallToAction;
-  image?: string | any; // TODO: find HTMLElementProps
+  title?: string
+  subtitle?: string
+  callToAction?: string | CallToAction
+  callToAction2?: string | CallToAction
+  image?: string | any // TODO: find HTMLElementProps
 }
 
 const {
-  title = await Astro.slots.render('title'),
-  subtitle = await Astro.slots.render('subtitle'),
-  content = await Astro.slots.render('content'),
-  callToAction = await Astro.slots.render('callToAction'),
-  callToAction2 = await Astro.slots.render('callToAction2'),
-  image = await Astro.slots.render('image'),
+  title = await Astro.slots.render( 'title' ),
+  subtitle = await Astro.slots.render( 'subtitle' ),
+  content = await Astro.slots.render( 'content' ),
+  callToAction = await Astro.slots.render( 'callToAction' ),
+  callToAction2 = await Astro.slots.render( 'callToAction2' ),
+  image = await Astro.slots.render( 'image' ),
 } = Astro.props;
 ---
 
@@ -46,9 +46,11 @@ const {
             {
               callToAction && (
                 <div class="flex w-full sm:w-auto">
-                  {typeof callToAction === 'string' ? (
+                  {typeof callToAction === 'string'
+                    ? (
                     <Fragment set:html={callToAction} />
-                  ) : (
+                      )
+                    : (
                     <a class="btn btn-primary sm:mb-0 w-full" href={callToAction?.href} target="_blank" rel="noopener">
                       {callToAction?.icon && (
                         <>
@@ -57,16 +59,18 @@ const {
                       )}
                       {callToAction?.text}
                     </a>
-                  )}
+                      )}
                 </div>
               )
             }
             {
               callToAction2 && (
                 <div class="flex w-full sm:w-auto">
-                  {typeof callToAction2 === 'string' ? (
+                  {typeof callToAction2 === 'string'
+                    ? (
                     <Fragment set:html={callToAction2} />
-                  ) : (
+                      )
+                    : (
                     <a class="btn w-full" href={callToAction2?.href}>
                       {callToAction2?.icon && (
                         <>
@@ -75,7 +79,7 @@ const {
                       )}
                       {callToAction2.text}
                     </a>
-                  )}
+                      )}
                 </div>
               )
             }
@@ -87,12 +91,14 @@ const {
         {
           image && (
             <div class="relative m-auto max-w-5xl">
-              {typeof image === 'string' ? (
+              {typeof image === 'string'
+                ? (
                 <Fragment set:html={image} />
-              ) : (
+                  )
+                : (
                 <Picture
                   class="mx-auto rounded-md w-full"
-                  widths={[400, 768, 1024, 2040]}
+                  widths={[ 400, 768, 1024, 2040 ]}
                   sizes="(max-width: 767px) 400px, (max-width: 1023px) 768px, (max-width: 2039px) 1024px, 2040px"
                   aspectRatio={1024 / 576}
                   loading="eager"
@@ -100,7 +106,7 @@ const {
                   height={576}
                   {...image}
                 />
-              )}
+                  )}
             </div>
           )
         }
