--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,15 +1,15 @@
 ---
-import Layout from '~/layouts/BaseLayout.astro';
-import Header from '~/components/widgets/Header.astro';
-import Footer from '~/components/widgets/Footer.astro';
-import Announcement from '~/components/widgets/Announcement.astro';
+import Layout from '~/layouts/BaseLayout.astro'
+import Header from '~/components/widgets/Header.astro'
+import Footer from '~/components/widgets/Footer.astro'
+import Announcement from '~/components/widgets/Announcement.astro'
 
-import { headerData, footerData } from '~/data';
+import { footerData, headerData } from '~/data'
 
-import { MetaSEO } from '~/types';
+import type { MetaSEO } from '~/types'
 
 export interface Props {
-  meta?: MetaSEO;
+  meta?: MetaSEO
 }
 
 const { meta } = Astro.props;
