--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,17 @@
 ---
-import { SITE } from '~/config.mjs';
-import Layout from '~/layouts/PageLayout.astro';
+import { SITE } from '~/config.mjs'
+import Layout from '~/layouts/PageLayout.astro'
 
-import Hero from '~/components/widgets/Hero.astro';
-import Note from '~/components/widgets/Note.astro';
-import Features from '~/components/widgets/Features.astro';
-import Features2 from '~/components/widgets/Features2.astro';
-import Steps from '~/components/widgets/Steps.astro';
-import Content from '~/components/widgets/Content.astro';
-import LatestPosts from '~/components/blog/LatestPosts.astro';
-import FAQs from '~/components/widgets/FAQs.astro';
-import Stats from '~/components/widgets/Stats.astro';
-import CallToAction from '~/components/widgets/CallToAction.astro';
+import Hero from '~/components/widgets/Hero.astro'
+import Note from '~/components/widgets/Note.astro'
+import Features from '~/components/widgets/Features.astro'
+import Features2 from '~/components/widgets/Features2.astro'
+import Steps from '~/components/widgets/Steps.astro'
+import Content from '~/components/widgets/Content.astro'
+import LatestPosts from '~/components/blog/LatestPosts.astro'
+import FAQs from '~/components/widgets/FAQs.astro'
+import Stats from '~/components/widgets/Stats.astro'
+import CallToAction from '~/components/widgets/CallToAction.astro'
 
 const meta = {
   title: SITE.title,
@@ -26,7 +26,7 @@ const meta = {
   <Hero
     callToAction={{ text: 'Get template', href: 'https://github.com/onwidget/astrowind', icon: 'tabler:download' }}
     callToAction2={{ text: 'Learn more', href: '#features' }}
-    image={{ src: import('~/assets/images/hero.png'), alt: 'Paste Resume Hero Image' }}
+    image={{ src: import( '~/assets/images/hero.png' ), alt: 'Paste Resume Hero Image' }}
   >
     <Fragment slot="title">
       Free template for <span class="hidden lg:inline">create your website <br class="2xl:hidden"/> with</span>
@@ -120,7 +120,7 @@ const meta = {
       },
     ]}
     image={{
-      src: import('~/assets/images/caos.jpg'),
+      src: import( '~/assets/images/caos.jpg' ),
       alt: 'Colorful Image',
     }}
   >
@@ -157,7 +157,7 @@ const meta = {
       },
     ]}
     image={{
-      src: import('~/assets/images/vintage.jpg'),
+      src: import( '~/assets/images/vintage.jpg' ),
       alt: 'Vintage Image',
     }}
   />
@@ -191,7 +191,7 @@ const meta = {
       },
     ]}
     image={{
-      src: import('~/assets/images/creativity.jpg'),
+      src: import( '~/assets/images/creativity.jpg' ),
       alt: 'Steps image',
     }}
   />
@@ -265,9 +265,9 @@ const meta = {
   <LatestPosts
     title="Find out more content in our Blog"
     information={`The blog is used to display Paste Resume documentation.
-			Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-			Astro is a very interesting technology. Thanks.
-		`}
+        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
+        Astro is a very interesting technology. Thanks.
+    `}
     postIds={[
       'get-started-website-with-astro-tailwind-css.md',
       'how-to-customize-astrowind-to-your-brand.md',
@@ -292,29 +292,29 @@ const meta = {
         {
           question: 'How to install the Astro + Tailwind CSS template?',
           answer:
-            "Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.",
+            'Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.',
         },
         {
-          question: "What's something that you don't understand?",
+          question: 'What\'s something that you don\'t understand?',
           answer:
-            "A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn't even know we were calling him Big Bear.",
+            'A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn\'t even know we were calling him Big Bear.',
         },
       ],
       [
         {
-          question: "What's an example of when you changed your mind?",
+          question: 'What\'s an example of when you changed your mind?',
           answer:
-            "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
+            'Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He\'s a demon on wheels.',
         },
         {
           question: 'What is something that you would like to try again?',
           answer:
-            "A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don't know who you're talking to, so let me clue you in.",
+            'A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don\'t know who you\'re talking to, so let me clue you in.',
         },
         {
           question: 'If you could only ask one question to each person you meet, what would that question be?',
           answer:
-            "This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that's certainly good to know. About four years. I got tired of hearing how young I looked.",
+            'This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that\'s certainly good to know. About four years. I got tired of hearing how young I looked.',
         },
       ],
     ]}
