--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '~/layouts/BaseLayout.astro'
 import Header from '~/components/widgets/Header.astro'
-import Footer from '~/components/widgets/Footer.astro'
 import Announcement from '~/components/widgets/Announcement.astro'
 
-import { footerData, headerData } from '~/data'
+import { headerData } from '~/data'
 
 import type { MetaSEO } from '~/types'
 
@@ -26,6 +25,6 @@ const { meta } = Astro.props;
     <slot />
   </main>
   <slot name="footer">
-    <Footer {...footerData} />
+    <!-- <Footer {...footerData} /> -->
   </slot>
 </Layout>
