--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -19,7 +19,11 @@ const { meta } = Astro.props;
     <Announcement />
   </slot>
   <slot name="header">
-    <Header {...headerData} isSticky showRssFeed showToggleTheme />
+    <Header
+        {...headerData}
+        isSticky
+        showToggleTheme
+    />
   </slot>
   <main>
     <slot />
