Hydrate Queries component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@ const meta = {
 
 <Layout {meta}>
     <div>
-        <Queries />
+        <Queries
+            client:load
+        />
     </div>
 </Layout>
