--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,8 @@
 ---
 ---
 
-<span class="self-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
-  🧑‍💻 Paste Resume</span
+<span
+    class="flex items-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white gap-3"
 >
+  🧑‍💻 Paste Resume<div class="flex items-center bg-black/30 text-xs rounded-full px-2 py-1">Beta</div>
+</span>
