Scale down beta badge

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,7 +2,7 @@
 ---
 
 <span
-    class="flex items-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white gap-3"
+    class="flex items-center ml-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white gap-1"
 >
-  🧑‍💻 Paste Resume<div class="flex items-center bg-black/30 text-xs rounded-full px-2 py-1">Beta</div>
+  🧑‍💻 Paste Resume<div class="flex items-center scale-75 text-white bg-black/30 text-xs rounded-full px-2 py-1">Beta</div>
 </span>
